--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ game/dota_addons/trails/tools_thumbnail_cache.bin
 game/dota_addons/trails/panorama_debugger.cfg
 game/dota_addons/trails/scripts/npc/npc_heroes_custom.txt
 game/dota_addons/trails/scripts/npc/npc_abilities_custom.txt
+game/dota_addons/trails/scripts/npc/items/generated_items.txt
+game/dota_addons/trails/panorama/*
 
 game/dota_addons/trails/scripts/vscripts/npc_units.txt
 
