initial version of tetracyclic game mode

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+content/dota_addons/trails/materials/overviews/*
+
 game/dota_addons/trails/network_measurement.txt
 game/dota_addons/trails/models/*
 game/dota_addons/trails/materials/*
